# oh-my-git

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .reuse-hdrmap.yaml  CMakeLists.txt  Makefile  README.md  REUSE.toml  commit-message.template  gitconfig
.github/: commit-message.template
.github/workflows/: pre-commit-check.yaml  pre-commit-update.yaml
.reuse/templates/: hash.commented.jinja2.license
profile.d/: oh-my-git-keybindings.sh.in
scripts/: gh-select-pr  git-select-branch  git-select-worktree  git-worktree-checkout
